# ABFGP

./: .gitattributes  README.md
abfgp-2.f/: README.txt  abfgp-test-executables.py  abfgp-test-imports.py  abfgp.py  abgp-genestructure.py  abgp-intronanalyses.py  abgp-orfanalyses.py  abgp_etc.py  abgp_exceptions.py  abgp_geneconfirmation.py  abgp_logging.py  abgp_unigeneconfirmation.py  abgp_warnings.py  abgpdbwarehouseminer.py  abgpgenelocusdirectory.py  cleanup.sh  codingblockgraphinterface.py  dna2prot.py  intronprojection.py  lib_abgpgff.py  lib_basebias.py  lib_blastp.py  lib_cexpander.py  lib_clustalw.py  lib_codingarray.py  lib_crossblast.py  lib_crossdatafunctions.py  lib_fasta.py  lib_filevalidation.py  lib_genestructure.py  lib_hmm.py  lib_hmm_pairwise.py  lib_intron.py  lib_introns_pairwise.py  lib_optparse.py  lib_orfset.py  lib_pcg2blocks.py  lib_rip.py  (+17 more)
abfgp-2.f/software/cexpander-1.0/cbalignp_test_2/src/: .directory  B.fasta  B.fasta~  DNAmatrix.txt  DNAmatrix.txt~  Makefile  Makefile.am  Makefile.in  TF.fasta  TF.out  alignment.out  alignprots.cpp  alignprots.cpp~  alignprots.h  alignprots.h~  alignucs.cpp  alignucs.cpp~  alignucs.h  alignucs.h~  cbalignp  cbalignp.cpp  cbalignp.cpp~  defragM.cpp  defragM.cpp~  defragM.h  defragM.h~  ebasics.cpp  ebasics.cpp~  ebasics.h  ebasics.h~  genestruct.txt  getFasta.py  gmatrix.cpp  gmatrix.cpp~  gmatrix.h  introns.out  mOut.out  makeTest  result2.out  results.out  (+19 more)
abfgp-2.f/software/cexpander-1.0/cbalignp_test_2/src/.deps/: alignprots.Po  alignucs.Po  cbalignp.Po  defragM.Po  ebasics.Po  gmatrix.Po
(+1319 files in other folders)
