bin_PROGRAMS = cbalignp
cbalignp_SOURCES = cbalignp.cpp gmatrix.cpp ebasics.cpp alignucs.cpp \
		alignprots.cpp defragM.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
cbalignp_LDFLAGS = $(all_libraries) 
noinst_HEADERS = gmatrix.h ebasics.h alignucs.h alignprots.h defragM.h
